<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_ai_upscale"
		android:icon="@drawable/ic_auto_fix"
		android:title="@string/ai_upscaling"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_save"
		android:icon="@drawable/ic_save"
		android:title="@string/save"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_delete"
		android:icon="@drawable/ic_delete"
		android:title="@string/delete"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_mark_current"
		android:icon="@drawable/ic_eye_check"
		android:title="@string/mark_as_current"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_mark_up_to"
		android:icon="@drawable/ic_updated"
		android:title="@string/mark_up_to_here"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_mark_read"
		android:icon="@drawable/ic_eye_check"
		android:title="@string/mark_read"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_mark_unread"
		android:icon="@drawable/ic_eye_off"
		android:title="@string/mark_unread"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_select_range"
		android:icon="@drawable/ic_select_range"
		android:title="@string/select_range"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_select_all"
		android:icon="?actionModeSelectAllDrawable"
		android:title="@android:string/selectAll"
		app:showAsAction="ifRoom|withText" />

</menu>
